{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "MoveActions",
            "id": "b546a766-de19-47a6-858e-510bab2586d5",
            "actions": [
                {
                    "name": "LookOut",
                    "type": "Button",
                    "id": "1c53df1b-61ad-4b11-9f16-4e056a7b97e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RefreshPath",
                    "type": "Button",
                    "id": "6e6fdf5c-0ff8-4047-ac82-b4b4566a55d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HoldToMove",
                    "type": "Button",
                    "id": "437e1722-495d-4649-b36d-3ade97701bcd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e99957cd-56fd-4643-b69a-6c69e39a9cf9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LookOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43675c28-68e8-4d26-b1ab-9b4792de8e97",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RefreshPath",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81cbfa1a-400b-49da-980b-d8ad8f191aa3",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RefreshPath",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "501e9018-6955-4229-b8eb-5690e90e12c5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "HoldToMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Key and mouse",
            "bindingGroup": "Key and mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}